fix: correct zero contribution top repos language distribution 7d82c0d0ae279694eb47dd523797f0eea1cb9c9f

--- a/changelog.html
+++ b/changelog.html
@@ -37,6 +37,11 @@
 <blockquote>
 <p>All notable changes to this project will be documented in this file</p>
 </blockquote>
+<h2 id="120-beta7-2023-04-09"><a href="https://github.com/open-sauced/opengraph.opensauced.pizza/compare/v1.2.0-beta.6...v1.2.0-beta.7">1.2.0-beta.7</a> (2023-04-09)</h2>
+<h3 id="📝-documentation">📝 Documentation</h3>
+<ul>
+<li>update live environments lins and document local development (<a href="https://github.com/open-sauced/opengraph.opensauced.pizza/commit/08cead19189d14ff4d01a23584400c284818a091">08cead1</a>)</li>
+</ul>
 <h2 id="120-beta6-2023-04-09"><a href="https://github.com/open-sauced/opengraph.opensauced.pizza/compare/v1.2.0-beta.5...v1.2.0-beta.6">1.2.0-beta.6</a> (2023-04-09)</h2>
 <h3 id="🐛-bug-fixes">🐛 Bug Fixes</h3>
 <ul>
@@ -84,7 +89,7 @@
 <li>correct user name being displayed as login (<a href="https://github.com/open-sauced/opengraph.opensauced.pizza/commit/19043fc359597bfa31f9e1bdc864c1a18a486fc1">19043fc</a>)</li>
 </ul>
 <h2 id="110-2023-04-04"><a href="https://github.com/open-sauced/opengraph.opensauced.pizza/compare/v1.0.4...v1.1.0">1.1.0</a> (2023-04-04)</h2>
-<h3 id="📝-documentation">📝 Documentation</h3>
+<h3 id="📝-documentation-1">📝 Documentation</h3>
 <ul>
 <li>correct readme with new style (<a href="https://github.com/open-sauced/opengraph.opensauced.pizza/commit/ccc8a96399322265affdaefb65b2e96f557943ab">ccc8a96</a>)</li>
 </ul>
@@ -121,7 +126,7 @@
 <ul>
 <li>implement release tooling (<a href="https://github.com/open-sauced/opengraph.opensauced.pizza/commit/3e35dc9b5a7ae1bfd8a1ac404593d57b83e8aac4">3e35dc9</a>)</li>
 </ul>
-<h3 id="📝-documentation-1">📝 Documentation</h3>
+<h3 id="📝-documentation-2">📝 Documentation</h3>
 <ul>
 <li>add partial readme (<a href="https://github.com/open-sauced/opengraph.opensauced.pizza/commit/3b5d8381547356c57fc1aab8087fb37fbcc320be">3b5d838</a>)</li>
 </ul>
