--- a/coverage.html
+++ b/coverage.html
@@ -172,7 +172,7 @@
             <td>SocialCardController</td>
             <td align="right" data-sort="0">
                 <span class="coverage-percent">0 %</span>
-                <span class="coverage-count">(0/2)</span>
+                <span class="coverage-count">(0/3)</span>
             </td>
         </tr>
         <tr class="low">
@@ -182,6 +182,18 @@
             </td>
             <td>injectable</td>
             <td>SocialCardService</td>
+            <td align="right" data-sort="0">
+                <span class="coverage-percent">0 %</span>
+                <span class="coverage-count">(0/6)</span>
+            </td>
+        </tr>
+        <tr class="low">
+            <td>
+                <!-- miscellaneous -->
+                <a href="./interfaces/RequiresUpdateMeta.html">src/social-card/social-card.service.ts</a>
+            </td>
+            <td>interface</td>
+            <td>RequiresUpdateMeta</td>
             <td align="right" data-sort="0">
                 <span class="coverage-percent">0 %</span>
                 <span class="coverage-count">(0/5)</span>
