--- a/controllers/SocialCardController.html
+++ b/controllers/SocialCardController.html
@@ -85,6 +85,10 @@
                         <ul class="index-list">
                             <li>
                                     <span class="modifier">Async</span>
+                                <a href="#checkUserSocialCard" >checkUserSocialCard</a>
+                            </li>
+                            <li>
+                                    <span class="modifier">Async</span>
                                 <a href="#generateUserSocialCard" >generateUserSocialCard</a>
                             </li>
                         </ul>
@@ -108,18 +112,18 @@
         <tbody>
             <tr>
                 <td class="col-md-4">
-                    <a name="generateUserSocialCard"></a>
+                    <a name="checkUserSocialCard"></a>
                     <span class="name">
                         <span class="modifier">Async</span>
-                        <span ><b>generateUserSocialCard</b></span>
-                        <a href="#generateUserSocialCard"><span class="icon ion-ios-link"></span></a>
+                        <span ><b>checkUserSocialCard</b></span>
+                        <a href="#checkUserSocialCard"><span class="icon ion-ios-link"></span></a>
                     </span>
                 </td>
             </tr>
             <tr>
                 <td class="col-md-4">
                     <span class="modifier-icon icon ion-ios-reset"></span>
-                    <code>generateUserSocialCard(username: <a href="https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/string" target="_blank">string</a>)</code>
+                    <code>checkUserSocialCard(username: <a href="https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/string" target="_blank">string</a>, res: FastifyReply)</code>
                 </td>
             </tr>
 
@@ -127,14 +131,14 @@
                 <td class="col-md-4">
                     <b>Decorators : </b>
                     <br />
-                    <code>@Get(&#x27;/:username&#x27;)<br />@ApiOperation({operationId: &#x27;generateUserSocialCard&#x27;, summary: &#x27;Gets latest cache aware social card link for :username or generates a new one&#x27;})<br />@Header(&#x27;Content-Type&#x27;, &#x27;image/png&#x27;)<br />@ApiOkResponse({type: StreamableFile})<br />@ApiNotFoundResponse({description: &#x27;User not found&#x27;})<br />@Redirect()<br /></code>
+                    <code>@Head(&#x27;/:username&#x27;)<br />@ApiNoContentResponse({description: &#x27;User social card image is up to date&#x27;, status: undefined})<br />@ApiResponse({description: &#x27;User social card image needs regeneration&#x27;, status: undefined})<br />@ApiNotFoundResponse({description: &#x27;User social card image not found&#x27;, status: undefined})<br /></code>
                 </td>
             </tr>
 
             <tr>
                 <td class="col-md-4">
-                    <div class="io-line">Defined in <a href="" data-line="22"
-                            class="link-to-prism">src/social-card/social-card.controller.ts:22</a></div>
+                    <div class="io-line">Defined in <a href="" data-line="24"
+                            class="link-to-prism">src/social-card/social-card.controller.ts:24</a></div>
                 </td>
             </tr>
 
@@ -166,13 +170,115 @@
 
 
                                 </tr>
+                                <tr>
+                                    <td>res</td>
+                                    <td>
+                                            <code>FastifyReply</code>
+                                    </td>
+
+                                    <td>
+                                        No
+                                    </td>
+
+
+                                </tr>
                             </tbody>
                         </table>
                     </div>
                     <div>
                     </div>
                     <div class="io-description">
-                        <b>Returns : </b>    <code>Promise&lt;literal type&gt;</code>
+                        <b>Returns : </b>    <code>Promise&lt;void&gt;</code>
+
+                    </div>
+                    <div class="io-description">
+                        
+                    </div>
+                </td>
+            </tr>
+        </tbody>
+    </table>
+    <table class="table table-sm table-bordered">
+        <tbody>
+            <tr>
+                <td class="col-md-4">
+                    <a name="generateUserSocialCard"></a>
+                    <span class="name">
+                        <span class="modifier">Async</span>
+                        <span ><b>generateUserSocialCard</b></span>
+                        <a href="#generateUserSocialCard"><span class="icon ion-ios-link"></span></a>
+                    </span>
+                </td>
+            </tr>
+            <tr>
+                <td class="col-md-4">
+                    <span class="modifier-icon icon ion-ios-reset"></span>
+                    <code>generateUserSocialCard(username: <a href="https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/string" target="_blank">string</a>, res: FastifyReply)</code>
+                </td>
+            </tr>
+
+            <tr>
+                <td class="col-md-4">
+                    <b>Decorators : </b>
+                    <br />
+                    <code>@Get(&#x27;/:username&#x27;)<br />@ApiOperation({operationId: &#x27;generateUserSocialCard&#x27;, summary: &#x27;Gets latest cache aware social card link for :username or generates a new one&#x27;})<br />@Header(&#x27;Content-Type&#x27;, &#x27;image/png&#x27;)<br />@ApiOkResponse({type: StreamableFile, description: &#x27;Social card image&#x27;})<br />@ApiNotFoundResponse({description: &#x27;User not found&#x27;})<br />@Redirect()<br /></code>
+                </td>
+            </tr>
+
+            <tr>
+                <td class="col-md-4">
+                    <div class="io-line">Defined in <a href="" data-line="48"
+                            class="link-to-prism">src/social-card/social-card.controller.ts:48</a></div>
+                </td>
+            </tr>
+
+
+            <tr>
+                <td class="col-md-4">
+
+                    <div class="io-description">
+                        <b>Parameters :</b>
+                        
+                        <table class="params">
+                            <thead>
+                                <tr>
+                                    <td>Name</td>
+                                    <td>Type</td>
+                                    <td>Optional</td>
+                                </tr>
+                            </thead>
+                            <tbody>
+                                <tr>
+                                    <td>username</td>
+                                    <td>
+                                                <code><a href="https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/string" target="_blank" >string</a></code>
+                                    </td>
+
+                                    <td>
+                                        No
+                                    </td>
+
+
+                                </tr>
+                                <tr>
+                                    <td>res</td>
+                                    <td>
+                                            <code>FastifyReply</code>
+                                    </td>
+
+                                    <td>
+                                        No
+                                    </td>
+
+
+                                </tr>
+                            </tbody>
+                        </table>
+                    </div>
+                    <div>
+                    </div>
+                    <div class="io-description">
+                        <b>Returns : </b>    <code>Promise&lt;void&gt;</code>
 
                     </div>
                     <div class="io-description">
@@ -186,8 +292,15 @@
 
 
     <div class="tab-pane fade  tab-source-code" id="c-source">
-        <pre class="line-numbers compodoc-sourcecode"><code class="language-typescript">import { Controller, Get, Header, Param, Redirect, StreamableFile } from &quot;@nestjs/common&quot;;
-import { ApiNotFoundResponse, ApiOkResponse, ApiOperation, ApiTags } from &quot;@nestjs/swagger&quot;;
+        <pre class="line-numbers compodoc-sourcecode"><code class="language-typescript">import { Controller, Get, Head, Header, HttpStatus, Param, Redirect, Res, StreamableFile } from &quot;@nestjs/common&quot;;
+import {
+  ApiNoContentResponse,
+  ApiNotFoundResponse,
+  ApiOkResponse,
+  ApiOperation, ApiResponse,
+  ApiTags,
+} from &quot;@nestjs/swagger&quot;;
+import { FastifyReply } from &quot;fastify&quot;;
 
 import { SocialCardService } from &quot;./social-card.service&quot;;
 
@@ -198,21 +311,41 @@ export class SocialCardController {
     private readonly socialCardService: SocialCardService,
   ) {}
 
+  @Head(&quot;/:username&quot;)
+  @ApiNoContentResponse({ description: &quot;User social card image is up to date&quot;, status: HttpStatus.NO_CONTENT })
+  @ApiResponse({ description: &quot;User social card image needs regeneration&quot;, status: HttpStatus.NOT_MODIFIED })
+  @ApiNotFoundResponse({ description: &quot;User social card image not found&quot;, status: HttpStatus.NOT_FOUND })
+  async checkUserSocialCard (
+    @Param(&quot;username&quot;) username: string,
+      @Res() res: FastifyReply,
+  ): Promise&lt;void&gt; {
+    const { fileUrl, hasFile, needsUpdate, lastModified } &#x3D; await this.socialCardService.checkRequiresUpdate(username);
+
+    return res
+      .headers({
+        &quot;x-amz-meta-last-modified&quot;: lastModified?.toISOString() ?? &quot;&quot;,
+        &quot;x-amz-meta-location&quot;: fileUrl,
+      })
+      .status(hasFile ? needsUpdate ? HttpStatus.NOT_MODIFIED : HttpStatus.NO_CONTENT : HttpStatus.NOT_FOUND)
+      .send();
+  }
+
   @Get(&quot;/:username&quot;)
   @ApiOperation({
     operationId: &quot;generateUserSocialCard&quot;,
     summary: &quot;Gets latest cache aware social card link for :username or generates a new one&quot;,
   })
   @Header(&quot;Content-Type&quot;, &quot;image/png&quot;)
-  @ApiOkResponse({ type: StreamableFile })
+  @ApiOkResponse({ type: StreamableFile, description: &quot;Social card image&quot; })
   @ApiNotFoundResponse({ description: &quot;User not found&quot; })
   @Redirect()
   async generateUserSocialCard (
     @Param(&quot;username&quot;) username: string,
-  ): Promise&lt;{ url: string }&gt; {
+      @Res() res: FastifyReply,
+  ): Promise&lt;void&gt; {
     const url &#x3D; await this.socialCardService.getUserCard(username);
 
-    return { url };
+    return res.status(302).redirect(url);
   }
 }
 </code></pre>
