--- a/changelog.html
+++ b/changelog.html
@@ -37,13 +37,23 @@
 <blockquote>
 <p>All notable changes to this project will be documented in this file</p>
 </blockquote>
+<h2 id="120-beta8-2023-04-09"><a href="https://github.com/open-sauced/opengraph.opensauced.pizza/compare/v1.2.0-beta.7...v1.2.0-beta.8">1.2.0-beta.8</a> (2023-04-09)</h2>
+<h3 id="🍕-features">🍕 Features</h3>
+<ul>
+<li>implement no-content verification strategy (<a href="https://github.com/open-sauced/opengraph.opensauced.pizza/commit/6efe0e67bb61dc2d0d7aab74744019441b6e777e">6efe0e6</a>)</li>
+</ul>
+<h3 id="🐛-bug-fixes">🐛 Bug Fixes</h3>
+<ul>
+<li>correct languages displaying less than 0.5% (<a href="https://github.com/open-sauced/opengraph.opensauced.pizza/commit/bee0e6e0cf202296c1b137a499bfc48ed481db1f">bee0e6e</a>)</li>
+<li>correct zero contribution top repos language distribution (<a href="https://github.com/open-sauced/opengraph.opensauced.pizza/commit/7d82c0d0ae279694eb47dd523797f0eea1cb9c9f">7d82c0d</a>)</li>
+</ul>
 <h2 id="120-beta7-2023-04-09"><a href="https://github.com/open-sauced/opengraph.opensauced.pizza/compare/v1.2.0-beta.6...v1.2.0-beta.7">1.2.0-beta.7</a> (2023-04-09)</h2>
 <h3 id="📝-documentation">📝 Documentation</h3>
 <ul>
 <li>update live environments lins and document local development (<a href="https://github.com/open-sauced/opengraph.opensauced.pizza/commit/08cead19189d14ff4d01a23584400c284818a091">08cead1</a>)</li>
 </ul>
 <h2 id="120-beta6-2023-04-09"><a href="https://github.com/open-sauced/opengraph.opensauced.pizza/compare/v1.2.0-beta.5...v1.2.0-beta.6">1.2.0-beta.6</a> (2023-04-09)</h2>
-<h3 id="🐛-bug-fixes">🐛 Bug Fixes</h3>
+<h3 id="🐛-bug-fixes-1">🐛 Bug Fixes</h3>
 <ul>
 <li>correct all tailwind classes except gaps (<a href="https://github.com/open-sauced/opengraph.opensauced.pizza/commit/fe447116ea17755e389e5d8942ced0e721ce2145">fe44711</a>), closes <a href="https://github.com/open-sauced/opengraph.opensauced.pizza/issues/7">#7</a></li>
 <li>correct user languages sizing issues (<a href="https://github.com/open-sauced/opengraph.opensauced.pizza/commit/5846c42fc2531b1e085ce1c6e982ac44e2ffd556">5846c42</a>)</li>
@@ -54,17 +64,17 @@
 <ul>
 <li>add tailwind proof of concept (<a href="https://github.com/open-sauced/opengraph.opensauced.pizza/commit/8594508a07a103fe6e209b1895c7c803e171eecb">8594508</a>)</li>
 </ul>
-<h3 id="🐛-bug-fixes-1">🐛 Bug Fixes</h3>
+<h3 id="🐛-bug-fixes-2">🐛 Bug Fixes</h3>
 <ul>
 <li>correct yoga layout double styling, remove repo icon extrenaous classes (<a href="https://github.com/open-sauced/opengraph.opensauced.pizza/commit/d84015bf1264397d9ac6ff18b7c5344f237708ff">d84015b</a>)</li>
 </ul>
 <h2 id="120-beta4-2023-04-08"><a href="https://github.com/open-sauced/opengraph.opensauced.pizza/compare/v1.2.0-beta.3...v1.2.0-beta.4">1.2.0-beta.4</a> (2023-04-08)</h2>
-<h3 id="🍕-features">🍕 Features</h3>
+<h3 id="🍕-features-1">🍕 Features</h3>
 <ul>
 <li>add custom cdn endpoint configuration for s3 bucket on digital ocean (<a href="https://github.com/open-sauced/opengraph.opensauced.pizza/commit/077e473ba9ec01d88d383f202427f06398047652">077e473</a>), closes <a href="https://github.com/open-sauced/opengraph.opensauced.pizza/issues/18">#18</a></li>
 </ul>
 <h2 id="120-beta3-2023-04-05"><a href="https://github.com/open-sauced/opengraph.opensauced.pizza/compare/v1.2.0-beta.2...v1.2.0-beta.3">1.2.0-beta.3</a> (2023-04-05)</h2>
-<h3 id="🍕-features-1">🍕 Features</h3>
+<h3 id="🍕-features-2">🍕 Features</h3>
 <ul>
 <li>implement digital ocean spaces s3 client storage and cache images 3 days (<a href="https://github.com/open-sauced/opengraph.opensauced.pizza/commit/792992e8ad8849a8e1c10178b84e0caa4d023b1b">792992e</a>)</li>
 </ul>
@@ -74,17 +84,17 @@
 <li>correct live release url in github actions deployment (<a href="https://github.com/open-sauced/opengraph.opensauced.pizza/commit/4a434e675198be1ee3ec0000a85a02dccf1b080e">4a434e6</a>)</li>
 </ul>
 <h2 id="120-beta1-2023-04-04"><a href="https://github.com/open-sauced/opengraph.opensauced.pizza/compare/v1.1.2...v1.2.0-beta.1">1.2.0-beta.1</a> (2023-04-04)</h2>
-<h3 id="🍕-features-2">🍕 Features</h3>
+<h3 id="🍕-features-3">🍕 Features</h3>
 <ul>
 <li>add boilerplate s3-client sdk code connected to digital ocean spaces (<a href="https://github.com/open-sauced/opengraph.opensauced.pizza/commit/a4a71e349579e86be65ce201f2ec941177a1e3de">a4a71e3</a>)</li>
 </ul>
 <h3 id="112-2023-04-04"><a href="https://github.com/open-sauced/opengraph.opensauced.pizza/compare/v1.1.1...v1.1.2">1.1.2</a> (2023-04-04)</h3>
-<h3 id="🐛-bug-fixes-2">🐛 Bug Fixes</h3>
+<h3 id="🐛-bug-fixes-3">🐛 Bug Fixes</h3>
 <ul>
 <li>correct font usage from roboto to design (inter) (<a href="https://github.com/open-sauced/opengraph.opensauced.pizza/commit/4748b98a99b50514c135ff4bf6f1b2de10f8939e">4748b98</a>)</li>
 </ul>
 <h3 id="111-2023-04-04"><a href="https://github.com/open-sauced/opengraph.opensauced.pizza/compare/v1.1.0...v1.1.1">1.1.1</a> (2023-04-04)</h3>
-<h3 id="🐛-bug-fixes-3">🐛 Bug Fixes</h3>
+<h3 id="🐛-bug-fixes-4">🐛 Bug Fixes</h3>
 <ul>
 <li>correct user name being displayed as login (<a href="https://github.com/open-sauced/opengraph.opensauced.pizza/commit/19043fc359597bfa31f9e1bdc864c1a18a486fc1">19043fc</a>)</li>
 </ul>
@@ -97,22 +107,22 @@
 <ul>
 <li>remove extraneous colors package (<a href="https://github.com/open-sauced/opengraph.opensauced.pizza/commit/4c7d29aa9ad9a7fe79c30fb79ed3e57b971fa9a5">4c7d29a</a>)</li>
 </ul>
-<h3 id="🍕-features-3">🍕 Features</h3>
+<h3 id="🍕-features-4">🍕 Features</h3>
 <ul>
 <li>add correct languages calculation and display (<a href="https://github.com/open-sauced/opengraph.opensauced.pizza/commit/977df7589d67e6987cd9cb4e6528a86f46470541">977df75</a>)</li>
 </ul>
 <h3 id="104-2023-04-04"><a href="https://github.com/open-sauced/opengraph.opensauced.pizza/compare/v1.0.3...v1.0.4">1.0.4</a> (2023-04-04)</h3>
-<h3 id="🐛-bug-fixes-4">🐛 Bug Fixes</h3>
+<h3 id="🐛-bug-fixes-5">🐛 Bug Fixes</h3>
 <ul>
 <li>correct top repositories distribution and name concatenation (<a href="https://github.com/open-sauced/opengraph.opensauced.pizza/commit/24bfb159bbe9c43e631432c69189f0ffba0c7c11">24bfb15</a>)</li>
 </ul>
 <h3 id="103-2023-04-04"><a href="https://github.com/open-sauced/opengraph.opensauced.pizza/compare/v1.0.2...v1.0.3">1.0.3</a> (2023-04-04)</h3>
-<h3 id="🐛-bug-fixes-5">🐛 Bug Fixes</h3>
+<h3 id="🐛-bug-fixes-6">🐛 Bug Fixes</h3>
 <ul>
 <li>remove static assets, get gfonts roboto versions (<a href="https://github.com/open-sauced/opengraph.opensauced.pizza/commit/dd096caba732f9ccdc11d1b280cd18cf442327cb">dd096ca</a>)</li>
 </ul>
 <h3 id="102-2023-04-03"><a href="https://github.com/open-sauced/opengraph.opensauced.pizza/compare/v1.0.1...v1.0.2">1.0.2</a> (2023-04-03)</h3>
-<h3 id="🐛-bug-fixes-6">🐛 Bug Fixes</h3>
+<h3 id="🐛-bug-fixes-7">🐛 Bug Fixes</h3>
 <ul>
 <li>correct docker build (<a href="https://github.com/open-sauced/opengraph.opensauced.pizza/commit/b62c12930ca927844689c723ca1c33942cb4868b">b62c129</a>)</li>
 </ul>
@@ -141,7 +151,7 @@
 <li>move to nextjs backend architecture static component functions and boilerplate (<a href="https://github.com/open-sauced/opengraph.opensauced.pizza/commit/d4f854d4d5cee998e6495753a44dc006547a32bd">d4f854d</a>)</li>
 <li>rewrite code and correct buffers (<a href="https://github.com/open-sauced/opengraph.opensauced.pizza/commit/c12099a219b529250ba6fb8527911c4972d344d4">c12099a</a>)</li>
 </ul>
-<h3 id="🍕-features-4">🍕 Features</h3>
+<h3 id="🍕-features-5">🍕 Features</h3>
 <ul>
 <li>add development tooling and backend configuration (<a href="https://github.com/open-sauced/opengraph.opensauced.pizza/commit/f1f5947c4b97829f8e17e56bd4c8c4aab5bd4c63">f1f5947</a>)</li>
 <li>add dynamic image (<a href="https://github.com/open-sauced/opengraph.opensauced.pizza/commit/5797c5447edbe4dd1923fecf3af72c169cc7b781">5797c54</a>)</li>
@@ -156,7 +166,7 @@
 <li>use node https instead of axios (<a href="https://github.com/open-sauced/opengraph.opensauced.pizza/commit/12b86a7ecbbe53308bc95526f9f72593ea430200">12b86a7</a>)</li>
 <li>User Profile cards (<a href="https://github.com/open-sauced/opengraph.opensauced.pizza/issues/5">#5</a>) (<a href="https://github.com/open-sauced/opengraph.opensauced.pizza/commit/64372f4fb75589cd9c633c79b9e2029c3ac8cab1">64372f4</a>)</li>
 </ul>
-<h3 id="🐛-bug-fixes-7">🐛 Bug Fixes</h3>
+<h3 id="🐛-bug-fixes-8">🐛 Bug Fixes</h3>
 <ul>
 <li>add awaits (<a href="https://github.com/open-sauced/opengraph.opensauced.pizza/commit/14a5e2804c497c9938d5595879e2f9b9d54d6054">14a5e28</a>)</li>
 <li>correct application return type image (<a href="https://github.com/open-sauced/opengraph.opensauced.pizza/commit/a0e6d3f55e43e326c8a4bf8a31d027b41040b37d">a0e6d3f</a>)</li>
