--- a/changelog.html
+++ b/changelog.html
@@ -37,6 +37,11 @@
 <blockquote>
 <p>All notable changes to this project will be documented in this file</p>
 </blockquote>
+<h2 id="120-beta10-2023-04-10"><a href="https://github.com/open-sauced/opengraph.opensauced.pizza/compare/v1.2.0-beta.9...v1.2.0-beta.10">1.2.0-beta.10</a> (2023-04-10)</h2>
+<h3 id="🐛-bug-fixes">🐛 Bug Fixes</h3>
+<ul>
+<li>correct app spec GET automatic rewrites of HEAD (<a href="https://github.com/open-sauced/opengraph.opensauced.pizza/commit/3047cec62aff770abb4fe97d736c18790e406fa8">3047cec</a>)</li>
+</ul>
 <h2 id="120-beta9-2023-04-10"><a href="https://github.com/open-sauced/opengraph.opensauced.pizza/compare/v1.2.0-beta.8...v1.2.0-beta.9">1.2.0-beta.9</a> (2023-04-10)</h2>
 <h3 id="🍕-features">🍕 Features</h3>
 <ul>
@@ -51,7 +56,7 @@
 <ul>
 <li>implement no-content verification strategy (<a href="https://github.com/open-sauced/opengraph.opensauced.pizza/commit/6efe0e67bb61dc2d0d7aab74744019441b6e777e">6efe0e6</a>)</li>
 </ul>
-<h3 id="🐛-bug-fixes">🐛 Bug Fixes</h3>
+<h3 id="🐛-bug-fixes-1">🐛 Bug Fixes</h3>
 <ul>
 <li>correct languages displaying less than 0.5% (<a href="https://github.com/open-sauced/opengraph.opensauced.pizza/commit/bee0e6e0cf202296c1b137a499bfc48ed481db1f">bee0e6e</a>)</li>
 <li>correct zero contribution top repos language distribution (<a href="https://github.com/open-sauced/opengraph.opensauced.pizza/commit/7d82c0d0ae279694eb47dd523797f0eea1cb9c9f">7d82c0d</a>)</li>
@@ -62,7 +67,7 @@
 <li>update live environments lins and document local development (<a href="https://github.com/open-sauced/opengraph.opensauced.pizza/commit/08cead19189d14ff4d01a23584400c284818a091">08cead1</a>)</li>
 </ul>
 <h2 id="120-beta6-2023-04-09"><a href="https://github.com/open-sauced/opengraph.opensauced.pizza/compare/v1.2.0-beta.5...v1.2.0-beta.6">1.2.0-beta.6</a> (2023-04-09)</h2>
-<h3 id="🐛-bug-fixes-1">🐛 Bug Fixes</h3>
+<h3 id="🐛-bug-fixes-2">🐛 Bug Fixes</h3>
 <ul>
 <li>correct all tailwind classes except gaps (<a href="https://github.com/open-sauced/opengraph.opensauced.pizza/commit/fe447116ea17755e389e5d8942ced0e721ce2145">fe44711</a>), closes <a href="https://github.com/open-sauced/opengraph.opensauced.pizza/issues/7">#7</a></li>
 <li>correct user languages sizing issues (<a href="https://github.com/open-sauced/opengraph.opensauced.pizza/commit/5846c42fc2531b1e085ce1c6e982ac44e2ffd556">5846c42</a>)</li>
@@ -73,7 +78,7 @@
 <ul>
 <li>add tailwind proof of concept (<a href="https://github.com/open-sauced/opengraph.opensauced.pizza/commit/8594508a07a103fe6e209b1895c7c803e171eecb">8594508</a>)</li>
 </ul>
-<h3 id="🐛-bug-fixes-2">🐛 Bug Fixes</h3>
+<h3 id="🐛-bug-fixes-3">🐛 Bug Fixes</h3>
 <ul>
 <li>correct yoga layout double styling, remove repo icon extrenaous classes (<a href="https://github.com/open-sauced/opengraph.opensauced.pizza/commit/d84015bf1264397d9ac6ff18b7c5344f237708ff">d84015b</a>)</li>
 </ul>
@@ -98,12 +103,12 @@
 <li>add boilerplate s3-client sdk code connected to digital ocean spaces (<a href="https://github.com/open-sauced/opengraph.opensauced.pizza/commit/a4a71e349579e86be65ce201f2ec941177a1e3de">a4a71e3</a>)</li>
 </ul>
 <h3 id="112-2023-04-04"><a href="https://github.com/open-sauced/opengraph.opensauced.pizza/compare/v1.1.1...v1.1.2">1.1.2</a> (2023-04-04)</h3>
-<h3 id="🐛-bug-fixes-3">🐛 Bug Fixes</h3>
+<h3 id="🐛-bug-fixes-4">🐛 Bug Fixes</h3>
 <ul>
 <li>correct font usage from roboto to design (inter) (<a href="https://github.com/open-sauced/opengraph.opensauced.pizza/commit/4748b98a99b50514c135ff4bf6f1b2de10f8939e">4748b98</a>)</li>
 </ul>
 <h3 id="111-2023-04-04"><a href="https://github.com/open-sauced/opengraph.opensauced.pizza/compare/v1.1.0...v1.1.1">1.1.1</a> (2023-04-04)</h3>
-<h3 id="🐛-bug-fixes-4">🐛 Bug Fixes</h3>
+<h3 id="🐛-bug-fixes-5">🐛 Bug Fixes</h3>
 <ul>
 <li>correct user name being displayed as login (<a href="https://github.com/open-sauced/opengraph.opensauced.pizza/commit/19043fc359597bfa31f9e1bdc864c1a18a486fc1">19043fc</a>)</li>
 </ul>
@@ -121,17 +126,17 @@
 <li>add correct languages calculation and display (<a href="https://github.com/open-sauced/opengraph.opensauced.pizza/commit/977df7589d67e6987cd9cb4e6528a86f46470541">977df75</a>)</li>
 </ul>
 <h3 id="104-2023-04-04"><a href="https://github.com/open-sauced/opengraph.opensauced.pizza/compare/v1.0.3...v1.0.4">1.0.4</a> (2023-04-04)</h3>
-<h3 id="🐛-bug-fixes-5">🐛 Bug Fixes</h3>
+<h3 id="🐛-bug-fixes-6">🐛 Bug Fixes</h3>
 <ul>
 <li>correct top repositories distribution and name concatenation (<a href="https://github.com/open-sauced/opengraph.opensauced.pizza/commit/24bfb159bbe9c43e631432c69189f0ffba0c7c11">24bfb15</a>)</li>
 </ul>
 <h3 id="103-2023-04-04"><a href="https://github.com/open-sauced/opengraph.opensauced.pizza/compare/v1.0.2...v1.0.3">1.0.3</a> (2023-04-04)</h3>
-<h3 id="🐛-bug-fixes-6">🐛 Bug Fixes</h3>
+<h3 id="🐛-bug-fixes-7">🐛 Bug Fixes</h3>
 <ul>
 <li>remove static assets, get gfonts roboto versions (<a href="https://github.com/open-sauced/opengraph.opensauced.pizza/commit/dd096caba732f9ccdc11d1b280cd18cf442327cb">dd096ca</a>)</li>
 </ul>
 <h3 id="102-2023-04-03"><a href="https://github.com/open-sauced/opengraph.opensauced.pizza/compare/v1.0.1...v1.0.2">1.0.2</a> (2023-04-03)</h3>
-<h3 id="🐛-bug-fixes-7">🐛 Bug Fixes</h3>
+<h3 id="🐛-bug-fixes-8">🐛 Bug Fixes</h3>
 <ul>
 <li>correct docker build (<a href="https://github.com/open-sauced/opengraph.opensauced.pizza/commit/b62c12930ca927844689c723ca1c33942cb4868b">b62c129</a>)</li>
 </ul>
@@ -175,7 +180,7 @@
 <li>use node https instead of axios (<a href="https://github.com/open-sauced/opengraph.opensauced.pizza/commit/12b86a7ecbbe53308bc95526f9f72593ea430200">12b86a7</a>)</li>
 <li>User Profile cards (<a href="https://github.com/open-sauced/opengraph.opensauced.pizza/issues/5">#5</a>) (<a href="https://github.com/open-sauced/opengraph.opensauced.pizza/commit/64372f4fb75589cd9c633c79b9e2029c3ac8cab1">64372f4</a>)</li>
 </ul>
-<h3 id="🐛-bug-fixes-8">🐛 Bug Fixes</h3>
+<h3 id="🐛-bug-fixes-9">🐛 Bug Fixes</h3>
 <ul>
 <li>add awaits (<a href="https://github.com/open-sauced/opengraph.opensauced.pizza/commit/14a5e2804c497c9938d5595879e2f9b9d54d6054">14a5e28</a>)</li>
 <li>correct application return type image (<a href="https://github.com/open-sauced/opengraph.opensauced.pizza/commit/a0e6d3f55e43e326c8a4bf8a31d027b41040b37d">a0e6d3f</a>)</li>
