fix: correct dark logo render and make it static dc9f3a4eb8292b7f94108932e469209c67b33405

--- a/miscellaneous/variables.html
+++ b/miscellaneous/variables.html
@@ -665,7 +665,7 @@ query ($username: String!, $dateSince: DateTime) {
         ${name}
       &lt;/h1&gt;
 
-      &lt;img tw&#x3D;&quot;w-48px h-48px border border-sauced-orange rounded&quot; src&#x3D;&quot;https://raw.githubusercontent.com/open-sauced/assets/main/svgs/slice-Black-Gradient.svg&quot;/&gt;
+      &lt;img tw&#x3D;&quot;w-48px h-48px border border-white rounded&quot; src&#x3D;&quot;https://raw.githubusercontent.com/open-sauced/assets/d9a0d5a317036084aa3f5f4e20cdfbe58dc37377/svgs/slice-Orange-Gradient.svg&quot;/&gt;
     &lt;/div&gt;
 
     &lt;div tw&#x3D;&quot;flex-col&quot; style&#x3D;&quot;gap: 8px;&quot;&gt;
