fix: correctly lowercase username display in social card fc9211c46e106db042b87605ee003f6ef6a3cd86

--- a/controllers/SocialCardController.html
+++ b/controllers/SocialCardController.html
@@ -333,7 +333,7 @@ export class SocialCardController {
       return res.status(HttpStatus.FOUND).redirect(fileUrl);
     }
 
-    const url &#x3D; await this.socialCardService.getUserCard(username);
+    const url &#x3D; await this.socialCardService.getUserCard(sanitizedUsername);
 
     return res.status(HttpStatus.FOUND).redirect(url);
   }
